# codegluer

./: .gitignore  LICENSE  README.md  codegluer.py  codegluer_gui.py  install.sh  pyproject.toml  pytest.ini  test_codegluer_gui.py  uninstall.sh
codegluer/: __init__.py  cli.py  core.py
tests/: conftest.py  test_ai_context.py  test_codegluer.py  test_codegluer_gui.py
